# managerserver/api_user.py
@@ -6,32 +6,39 @@ from cryptography.fernet import Fernet
 db = settings.db
 cursor = settings.cursor
 config = settings.config
-#load CRYPTO PWD from settings and init fernet
+# load CRYPTO PWD from settings and init fernet
 key = config['CRYPTO_PWD'].encode("utf-8")
 cipher_suite = Fernet(key)
 
-def encryptPWD(password):
+
+def encrypt_pwd(password):
     encoded_cipher = cipher_suite.encrypt(password.encode("utf-8"))
     return encoded_cipher.decode("utf-8")
 
-def loginUser(username, password):
+
+def user_login(username, password):
     return jsonify("root")
 
-def logoutUser(sid):
+
+def user_logout(sid):
     return jsonify("root")
 
-def createUser(sid, body):
-    pwd = encryptPWD(body['password'])
+
+def user_create(sid, body):
+    pwd = encrypt_pwd(body['password'])
     query = "INSERT INTO users (username, password, email) VALUES('{0}', '{1}', '{2}')".format(body['username'], db.escape_string(pwd), body['email'])
     cursor.execute(query)
     return jsonify('OK'), 200
 
-def getUserByName(sid, username):
+
+def user_get_by_name(sid, username):
     return jsonify("root")
 
-def deleteUser(sid, username):
+
+def user_delete(sid, username):
     return jsonify("root")
 
-def updateUser(sid, username, body):
+
+def user_update(sid, username, body):
     return jsonify("root")
 
